// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum VehicleStatus {
  AVAILABLE
  RESERVED
  MAINTENANCE
}

enum ReservationStatus {
  ACTIVE
  COMPLETED
  CANCELLED
}

enum Role {
  USER
  ADMIN
}

model User {
  id           Int           @id @default(autoincrement())
  name         String
  email        String        @unique
  phone        String?
  role         Role          @default(USER)
  reservations Reservation[]
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
}

model Vehicle {
  id                 Int           @id @default(autoincrement())
  registrationNumber String        @unique
  make               String
  model              String
  year               Int?
  mileage            Int?
  status             VehicleStatus @default(AVAILABLE)
  location           String?
  notes              String?
  reservations       Reservation[]
  maintenances       Maintenance[]
  createdAt          DateTime      @default(now())
  updatedAt          DateTime      @updatedAt
}

model Reservation {
  id            Int               @id @default(autoincrement())
  vehicle       Vehicle           @relation(fields: [vehicleId], references: [id])
  vehicleId     Int
  user          User              @relation(fields: [userId], references: [id])
  userId        Int
  startDatetime DateTime
  endDatetime   DateTime
  purpose       String?
  status        ReservationStatus @default(ACTIVE)
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt
}

model Maintenance {
  id          Int      @id @default(autoincrement())
  vehicle     Vehicle  @relation(fields: [vehicleId], references: [id])
  vehicleId   Int
  date        DateTime
  description String?
  cost        Float?
  performedBy String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}
